fix javadoc preview bug